fix(flyout-menu): [BLA-1513] Update z-index of flyout menu to be above date picker

--- a/packages/core-components/src/components/flyout-menu/flyout-menu.scss
+++ b/packages/core-components/src/components/flyout-menu/flyout-menu.scss
@@ -27,7 +27,7 @@
       position: absolute;
       right: -0.625rem;
       text-align: left;
-      z-index: 1000;
+      z-index: 1100;
       line-height: var(--b2b-size-copy-line-height-100);
       padding: var(--b2b-size-10) 0;
 
